2007-09-01 16:24-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Correction for compilation issue 
	found by Riccardo.   Code was improperly using protected _superMenu 
	variable directly.

2007-08-24 22:36-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/VersionProfiles.plist: Added version information for
	NSButtonCell.

2007-08-24 00:50-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPrivate.m: Changed initWithCoder: to handle
	older .gorm (version 0) files correctly.

2007-08-19 21:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog
	* GNUmakefile
	* Palettes/5Controllers/ControllersPalette.m
	* Palettes/5Controllers/ControllersPalette.tiff
	* Palettes/5Controllers/GNUmakefile
	* Palettes/5Controllers/GNUmakefile.preamble
	* Palettes/5Controllers/palette.table
	* Palettes/GNUmakefile
	* Resources/Defaults.plist: Initial changes for controllers palette.

2007-08-19 21:21-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* Palettes/GNUmakefile
	* Resources/Defaults.plist

2007-07-27 13:30-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Remove commented code.
	* Palettes/0Menus/GormNSMenu.m: Added private category to prevent
	compilation warning.

2007-07-26 10:25-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenuView.m: Remove commented out code.

2007-07-26 10:06-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Remove default setting
	* Palettes/0Menus/GNUmakefile: Add GormNSMenuView.m
	* Palettes/0Menus/GormNSMenu.m: Override methods to prevent changing
	style to Mac style for menu being edited.
	* Palettes/0Menus/GormNSMenuView.[mh]: New class overrides methods
	to prevent switching style to Mac style for menu being edited.
	* Palettes/0Menus/palette.table: Added substitution rule for 
	NSMenuView.

2007-06-27 19:25-EDT Gregory John Casamento <greg_casamento@yahoo.com>
